2004-04-09  Chris Toshok  <toshok@ximian.com>

	* e-shell.c (e_shell_attempt_upgrade): use BASE_VERSION to supply
	the major/minor version, and use UPGRADE_REVISION for the
	revision.
	(attempt_upgrade): store the key based on BASE_VERSION and
	UPGRADE_REVISION.

2004-04-09  Dan Winship  <danw@ximian.com>

	* e-user-creatable-items-handler.c: Change this a lot. Now each
	component will maintain its own EUserCreatableItemsHandler and
	merge the button and menus in and out of the UI as its controls
	are activated and deactivated. (This lets the connector component
	display the correct default for the New button). Also, update to
	the Product Design Team's new organization (separating object
	types from folder types)

	* e-shell.c: Remove all creatable_items_handler references
	(impl_dispose): unref the component registry (unrelated bug)
	
	* e-shell-window.c (e_shell_window_new): Remove
	creatable_items_handler reference

	* Makefile.am: Move e-user-creatable-items-handler from evolution
	to libeshell, and make libeshell depend on libemiscwidgets (for
	the combo button)

	* Evolution-Component.idl: add another field to CreatableItemType
	so we can distinguish object types from folder types.

2004-04-07  Jeffrey Stedfast  <fejj@ximian.com>

	* Evolution-ConfigControl.idl: Removed the "apply" method.

	* e-corba-config-page.c: We can probably remove this entire file,
	it seems pretty useless. But until I know for sure, I guess I
	won't bother.
	(impl_apply): Removed, no longer a valid interface.
	(listener_event_callback): Huh? calls a non-existant function if
	the event name was "changed". Uhm, yea...ok. Removed.
	(setup_listener): Removed. Did nothing but to setup the above
	listener.

	* evolution-config-control.c: No longer needs to keep 'changed'
	state.
	(evolution_config_control_changed): Removed.
	(impl_apply): Removed. No lonegr a valid interface.

2004-03-31  Rodney Dawes  <dobey@ximian.com>

	* e-shell-importer.c (choose_importer_from_list):
	(start_import):